Add background image on login page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
         {% endblock %}
 
     </head>
-    <body role="document">
+    <body role="document" {% block body_attributes %}{% endblock %}>
         {% block body %}{% endblock %}
 
         {% block javascripts %}
