--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}{{ 'layout.login'|trans({}, 'FOSUserBundle') }}{% endblock %}
 
+{% block body_attributes %}style="background-image: url({{ asset('images/background.jpg') }})"{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
