--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -6,9 +6,22 @@
 
 {% block body %}
     <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                    {% block fos_user_content %}{% endblock %}
+        <div class="row text-center">
+            <div class="col-md-4 col-md-offset-2">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">{{ 'login.register.title'|trans }}</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>{{ 'login.register.description'|trans }}</p>
+                        <a class="btn btn-lg btn-primary btn-block" href="{{ path('fos_user_registration_register') }}">
+                            {{ 'layout.register'|trans({}, 'FOSUserBundle') }}
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                {% block fos_user_content %}{% endblock %}
             </div>
         </div>
     </div>
