--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -1,44 +1,30 @@
 {% extends "UserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-    {% if error %}
-        <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
-    {% endif %}
-    <div class="login-panel panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</h3>
+    {# Registration column #}
+    <div class="col-md-4 col-md-offset-2 text-center">
+        <div class="login-panel panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{ 'login.register.title'|trans }}</h3>
+            </div>
+            <div class="panel-body">
+                <p>{{ 'login.register.description'|trans }}</p>
+                <a class="btn btn-lg btn-primary btn-block" href="{{ path('fos_user_registration_register') }}">
+                    {{ 'layout.register'|trans({}, 'FOSUserBundle') }}
+                </a>
+            </div>
         </div>
-        <div class="panel-body">
-            <form action="{{ path("fos_user_security_check") }}" method="post">
-                <fieldset>
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
+    </div>
 
-                    <div class="form-group">
-                        <label class="hidden"
-                               for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-                        <input class="form-control"
-                               placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" type="text"
-                               id="username" name="_username"
-                               value="{{ last_username }}"
-                               required="required"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="hidden"
-                               for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-                        <input class="form-control"
-                               placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}" type="password"
-                               id="password" name="_password" required="required"/>
-                    </div>
-                    <div class="checkbox">
-                        <label for="remember_me">
-                            <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
-                            {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
-                        </label>
-                    </div>
-                    <input class="btn btn-lg btn-default btn-block" type="submit" id="_submit" name="_submit"
-                           value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}"/>
-                </fieldset>
-            </form>
+    {# Login form #}
+    <div class="col-md-4 text-center">
+        <div class="login-panel panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</h3>
+            </div>
+            <div class="panel-body">
+                {% include "UserBundle:Security:login_content.html.twig" %}
+            </div>
         </div>
     </div>
 {% endblock fos_user_content %}
