--- a/src/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register.html.twig
@@ -17,6 +17,8 @@
 
                         <h4>{{ 'register.help.network_volunteer.title'|trans }}</h4>
                         <p>{{ 'register.help.network_volunteer.description'|trans }}</p>
+
+                        <a href="{{ path('fos_user_security_login') }}">{{ 'register.back_to_login'|trans }}</a>
                     </div>
                 </div>
             </div>
