--- a/src/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -7,7 +7,12 @@
             <h3 class="panel-title">{{ 'register.confirmed.title'|trans }}</h3>
         </div>
         <div class="panel-body">
-    <p>{{ 'register.confirmed.message'|trans({'%username%': user.username}) }}</p>
+            <p>{{ 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}</p>
+
+            {% if app.session is not empty %}
+                {% set targetUrl = app.session.get('_security.' ~ app.security.token.providerKey ~ '.target_path') %}
+                {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
+            {% endif %}
         </div>
     </div>
 </div>
