Add resetting mail

--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -24,6 +24,9 @@
             </div>
             <div class="panel-body">
                 {% include "UserBundle:Security:login_content.html.twig" %}
+                <p>
+                    <a href="{{ path('fos_user_resetting_request') }}">{{ 'login.forgot_password'|trans }}</a>
+                </p>
             </div>
         </div>
     </div>
