--- a/src/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,13 +1,13 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "UserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
     {% embed "UserBundle::single_box.html.twig" %}
         {% block title %}
-            {{ 'register.check_email.title'|trans }}
+            {{ 'resetting.password_already_requested.title'|trans }}
         {% endblock %}
 
         {% block body %}
-            <p>{{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}</p>
+            <p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
         {% endblock %}
     {% endembed %}
 {% endblock fos_user_content %}
