--- a/src/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/UserBundle/Resources/views/Resetting/request.html.twig
@@ -1,4 +1,4 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "UserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
     {% embed "UserBundle::single_box.html.twig" %}
