--- a/src/UserBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/UserBundle/Resources/views/Resetting/reset.html.twig
@@ -1,5 +1,5 @@
 
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "UserBundle::layout.html.twig" %}
 {% block fos_user_content %}
     {% embed "UserBundle::single_box.html.twig" %}
         {% block title %}
