Add profile and home controllers

--- a/src/AppBundle/Resources/views/navbar.html.twig
+++ b/src/AppBundle/Resources/views/navbar.html.twig
@@ -6,13 +6,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">{{ 'homepage.brand_name'|trans }}</a>
+        <a class="navbar-brand" href="index.html">{{ 'home.brand_name'|trans }}</a>
     </div>
     <!-- /.navbar-header -->
 
     <ul class="nav navbar-top-links navbar-right">
         <li>
-            <p>{{ 'homepage.hello'|trans({'%first_name%': app.user.firstName}) }}</p>
+            <p>{{ 'home.hello'|trans({'%first_name%': app.user.firstName}) }}</p>
         </li>
         <!-- /.dropdown -->
 
@@ -30,20 +30,20 @@
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav in" id="side-menu">
                 <li>
-                    <a href="{{ path('fos_user_profile_show') }}" class="active"><i
-                                class="fa fa-user fa-fw"></i> {{ 'homepage.navbar.profile'|trans }}</a>
+                    <a href="{{ path('cheerup_profile') }}" class="active"><i
+                                class="fa fa-user fa-fw"></i> {{ 'home.navbar.profile'|trans }}</a>
                 </li>
                 <li>
-                    <a href="#" class="active"><i class="fa fa-users fa-fw"></i> {{ 'homepage.navbar.group'|trans }}
+                    <a href="#" class="active"><i class="fa fa-users fa-fw"></i> {{ 'home.navbar.group'|trans }}
                     </a>
                 </li>
                 <li>
                     <a href="#" class="active"><i
-                                class="fa fa-search fa-fw"></i> {{ 'homepage.navbar.search'|trans }}</a>
+                                class="fa fa-search fa-fw"></i> {{ 'home.navbar.search'|trans }}</a>
                 </li>
                 {# TODO Check admin access to display this #}
                 {#<li>#}
-                {#<a href="index.html" class="active"><i class="fa fa-dashboard fa-fw"></i> {{ 'homepage.navbar.admin'|trans }}</a>#}
+                {#<a href="index.html" class="active"><i class="fa fa-dashboard fa-fw"></i> {{ 'home.navbar.admin'|trans }}</a>#}
                 {#</li>#}
             </ul>
         </div>
