Refactor username and lastname and setup edit profile action

--- a/src/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -15,7 +15,7 @@
                         href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a>
                     {% endif %}
                 {% else %}
-                    <a href="{{ path('homepage') }}">{{ 'register.back_to_home'|trans }}</a>
+                    <a href="{{ path('cheerup_home') }}">{{ 'register.back_to_home'|trans }}</a>
                 {% endif %}
             </p>
         {% endblock %}
