--- a/src/AppBundle/Resources/views/navbar.html.twig
+++ b/src/AppBundle/Resources/views/navbar.html.twig
@@ -12,7 +12,7 @@
 
     <ul class="nav navbar-top-links navbar-right">
         <li>
-            <p>{{ 'home.hello'|trans({'%first_name%': app.user.firstName}) }}</p>
+            <p>{{ 'home.hello'|trans({'%firstname%': app.user.firstname}) }}</p>
         </li>
         <!-- /.dropdown -->
 
@@ -30,7 +30,7 @@
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav in" id="side-menu">
                 <li>
-                    <a href="{{ path('cheerup_profile') }}" class="active"><i
+                    <a href="{{ path('cheerup_profile_edit') }}" class="active"><i
                                 class="fa fa-user fa-fw"></i> {{ 'home.navbar.profile'|trans }}</a>
                 </li>
                 <li>
