--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -56,35 +56,35 @@
         <div class="col-lg-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    {{ 'profile.edit.profile_picture.title'|trans }}
+                    {{ 'profile.edit.picture.title'|trans }}
                 </div>
                 <div class="panel-body text-center">
-                    {% if current_profile_picture_web_path is not null %}
-                        {% set profile_picture_url = current_profile_picture_web_path %}
+                    {% if current_picture_web_path is not null %}
+                        {% set picture_url = current_picture_web_path %}
                     {% else %}
-                        {% set profile_picture_url = asset('images/default_profile_picture.jpg') %}
+                        {% set picture_url = asset('images/default_profile_picture.jpg') %}
                     {% endif %}
-                    <img src="{{ profile_picture_url|imagine_filter('profile_thumbnail') }}"
+                    <img src="{{ picture_url|imagine_filter('profile_thumbnail') }}"
                          alt="Profile picture thumbnail"
                          class="img-circle"
                          style="padding: 15px"
                             />
-                    {{ form_start(form_profile_picture) }}
+                    {{ form_start(form_picture) }}
                     <div class="form-group text-center">
                         <div class="has-error">
-                            {{ form_errors(form_profile_picture.file) }}
+                            {{ form_errors(form_picture.file) }}
                         </div>
                         <div class="btn-group" role="group">
                             <span class="btn btn-lg btn-default btn-default btn-file">
-                                {{ 'profile.edit.profile_picture.choose_file'|trans }}
-                                {{ form_widget(form_profile_picture.file) }}
+                                {{ 'profile.edit.picture.choose_file'|trans }}
+                                {{ form_widget(form_picture.file) }}
                             </span>
                             <button type="submit" class="btn btn-lg btn-default btn-success">
                                 <i class="fa fa-cloud-upload fa-lg"></i>
                             </button>
                         </div>
                     </div>
-                    {{ form_end(form_profile_picture) }}
+                    {{ form_end(form_picture) }}
                 </div>
             </div>
         </div>
