--- a/src/AppBundle/Resources/views/Aggregate/show.html.twig
+++ b/src/AppBundle/Resources/views/Aggregate/show.html.twig
@@ -1,40 +1,57 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
 
-{% block body -%}
-    <h1>Aggregate</h1>
+{% block content %}
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ entity.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ entity.description }}</td>
-            </tr>
-            <tr>
-                <th>Aggregatetype</th>
-                <td>{{ entity.aggregateType }}</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">{{ aggregate.name }}</h1>
+    </div>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('aggregate') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('aggregate_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
-{% endblock %}
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                {{ ('aggregate.header.helper.' ~ aggregate.aggregateType)|trans }}
+            </div>
+            <div class="panel-body">
+                <p>
+                    {{ aggregate.description }}
+                </p>
+                <table class="record_properties">
+                    <tbody>
+                        <tr>
+                            <th>Id</th>
+                            <td>{{ aggregate.id }}</td>
+                        </tr>
+                        <tr>
+                            <th>Name</th>
+                            <td>{{ aggregate.name }}</td>
+                        </tr>
+                        <tr>
+                            <th>Description</th>
+                            <td>{{ aggregate.description }}</td>
+                        </tr>
+                        <tr>
+                            <th>Aggregatetype</th>
+                            <td>{{ aggregate.aggregateType }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <ul class="record_actions">
+                    <li>
+                        <a href="{{ path('aggregate') }}">
+                            Back to the list
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('aggregate_edit', { 'id': aggregate.id }) }}">
+                            Edit
+                        </a>
+                    </li>
+                    <li>{{ form(delete_form) }}</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+    {% endblock %}
