--- a/src/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register.html.twig
@@ -2,7 +2,7 @@
 
 {% block fos_user_content %}
     <div class="col-md-8 col-md-offset-2">
-        <div class="login-panel panel panel-default">
+        <div class="login-panel register-panel panel panel-default">
             <div class="panel-heading text-center">
                 <h3 class="panel-title">{{ 'register.title'|trans }}</h3>
             </div>
