Add admin and refactor Aggregate

--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,6 +1,12 @@
 <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
-    {{ form_widget(form) }}
-    <div>
-        <input id="_submit" name="_submit" class="btn btn-lg btn-default btn-success btn-block" type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
+    {#{{ form_widget(form) }}#}
+    {{ form_row(form.email) }}
+    {{ form_row(form.plainPassword) }}
+    {{ form_row(form.profileType) }}
+    <div class="box" style="display: none;">
+        {{ form_row(form.offshootOfOrigin) }}
     </div>
+    {{ form_row(form.firstname) }}
+    {{ form_row(form.lastname) }}
+    <input id="_submit" name="_submit" class="btn btn-lg btn-default btn-success btn-block" type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
 </form>
