--- a/src/AppBundle/Resources/views/navbar.html.twig
+++ b/src/AppBundle/Resources/views/navbar.html.twig
@@ -42,9 +42,11 @@
                                 class="fa fa-search fa-fw"></i> {{ 'home.navbar.search'|trans }}</a>
                 </li>
                 {# TODO Check admin access to display this #}
-                {#<li>#}
-                {#<a href="index.html" class="active"><i class="fa fa-dashboard fa-fw"></i> {{ 'home.navbar.admin'|trans }}</a>#}
-                {#</li>#}
+                {% if is_granted('ROLE_ADMIN') %}
+                <li>
+                    <a href="{{ path('cheerup_admin_index') }}" class="active"><i class="fa fa-dashboard fa-fw"></i> {{ 'home.navbar.admin'|trans }}</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
         <!-- /.sidebar-collapse -->
