--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -61,7 +61,7 @@
                     {{ 'profile.edit.offshoot_of_origin.title'|trans }}
                 </div>
                 <div class="panel-body text-center">
-                    <a href="{{ path('cheerup_aggregate_show', {'id': offshoot_of_origin.id}) }}">
+                    <a href="{{ path('cheerup_group_show', {'id': offshoot_of_origin.id}) }}">
                         {{ 'profile.edit.offshoot_of_origin.link'|trans }}
                     </a>
                 </div>
