--- a/src/AppBundle/Resources/views/Group/show.html.twig
+++ b/src/AppBundle/Resources/views/Group/show.html.twig
@@ -4,17 +4,17 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">{{ aggregate.name }}</h1>
+        <h1 class="page-header">{{ group.name }}</h1>
     </div>
 
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                {{ ('aggregate.header.helper.' ~ aggregate.aggregateType)|trans }}
+                {{ ('group.header.helper.' ~ group.groupType)|trans }}
             </div>
             <div class="panel-body">
                 <p>
-                    {{ aggregate.description }}
+                    {{ group.description }}
                 </p>
             </div>
         </div>
