--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -3,7 +3,9 @@
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{ 'profile.edit.title'|trans }}</h1>
+            <h1 class="page-header">{{ 'profile.edit.title'|trans }}
+                <small>{{ user.fullname }}</small>
+            </h1>
         </div>
         <!-- /.col-lg-12 -->
 
