--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -23,40 +23,42 @@
                     {{ 'admin.index.user_validation.title'|trans }}
                 </div>
                 <div class="panel-body">
-                        {% if form_user_validation_collection.users is not empty %}
+                    {% if form_user_validation_collection.users is not empty %}
                         {{ form_start(form_user_validation_collection) }}
-                        <table class="table table-bordered table-striped table-primary list-table">
-                            <thead>
-                                <tr>
-                                    <th>{{ 'admin.index.user_validation.field.firstname'|trans }}</th>
-                                    <th>{{ 'admin.index.user_validation.field.lastname'|trans }}</th>
-                                    <th>{{ 'admin.index.user_validation.field.profile_type'|trans }}</th>
-                                    <th>{{ 'admin.index.user_validation.field.offshoot_of_origin'|trans }}</th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for user in form_user_validation_collection.users %}
+                        <div class="dataTable_wrapper">
+                            <table class="table table-bordered table-striped table-primary list-table" id="user-validation-table">
+                                <thead>
                                     <tr>
-                                        <td>{{ user.vars.value.firstname }}</td>
-                                        <td>{{ user.vars.value.lastname }}</td>
-                                        <td>{{ ('user.profile_type.'~user.vars.value.profileType|lower)|trans }}</td>
-                                        <td>{% if user.vars.value.offshootOfOrigin is not null %}
-                                                {{ user.vars.value.offshootOfOrigin.name }}
-                                            {% endif %}
-                                        </td>
-                                        <td>{{ form_widget(user.validated) }}</td>
+                                        <th>{{ 'admin.index.user_validation.field.firstname'|trans }}</th>
+                                        <th>{{ 'admin.index.user_validation.field.lastname'|trans }}</th>
+                                        <th>{{ 'admin.index.user_validation.field.profile_type'|trans }}</th>
+                                        <th>{{ 'admin.index.user_validation.field.offshoot_of_origin'|trans }}</th>
+                                        <th></th>
                                     </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                    {% for user in form_user_validation_collection.users %}
+                                        <tr>
+                                            <td>{{ user.vars.value.firstname }}</td>
+                                            <td>{{ user.vars.value.lastname }}</td>
+                                            <td>{{ ('user.profile_type.'~user.vars.value.profileType|lower)|trans }}</td>
+                                            <td>{% if user.vars.value.offshootOfOrigin is not null %}
+                                                    {{ user.vars.value.offshootOfOrigin.name }}
+                                                {% endif %}
+                                            </td>
+                                            <td>{{ form_widget(user.validated) }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                         <input class="btn btn-lg btn-default btn-success btn-block" type="submit"
                                value="{{ 'admin.index.user_validation.submit'|trans }}"/>
                         {{ form_end(form_user_validation_collection) }}
                     {% else %}
-                    <div class="alert alert-warning">
-                        {{ 'admin.index.user_validation.empty'|trans }}
-                    </div>
+                        <div class="alert alert-warning">
+                            {{ 'admin.index.user_validation.empty'|trans }}
+                        </div>
                     {% endif %}
                 </div>
             </div>
