Install datatables, refactor gulp/bower and update users fixtures

--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -33,7 +33,7 @@
                                         <th>{{ 'admin.index.user_validation.field.lastname'|trans }}</th>
                                         <th>{{ 'admin.index.user_validation.field.profile_type'|trans }}</th>
                                         <th>{{ 'admin.index.user_validation.field.offshoot_of_origin'|trans }}</th>
-                                        <th></th>
+                                        <th class="no-sort"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
